# PreProcessing

./: .gitignore  CMakeLists.txt  PreProcessing.h  README.md  attempt1.cpp  main.cpp  playFile.cpp
cmake/: FindLibG3logger.cmake  FindLibPortAudio.cmake
include/: PreProcessing.h
src/: PreProcessing.cpp  main.cpp
